--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-gallery gallery5 cid-rJnSG9zit4 mbr-parallax-background" id="gallery5-15">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-gallery gallery5 cid-rJnSG9zit4 mbr-parallax-background" id="gallery5-15">
 
     
 
