create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header12 cid-rJnWsETFLM mbr-fullscreen mbr-parallax-background" id="header12-18">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header12 cid-rJnWsETFLM mbr-fullscreen mbr-parallax-background" id="header12-18">
 
     
 
@@ -95,7 +95,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
+                                <a href="page8.html">
                                     <span class="mbr-iconfont mbri-sale" style="font-size: 70px;"></span>
                                 </a>
                             </div>
@@ -104,7 +104,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.co/">
+                                <a href="page3.html">
                                     <span class="mbr-iconfont mbri-info" style="font-size: 70px;"></span>
                                 </a>
                             </div>
