--- a/page10.html
+++ b/page10.html
@@ -95,11 +95,9 @@
                                     <p class="mbr-text mbr-fonts-style col-right mbr-black align-center display-2">
                                         Php 98</p>
                                     <!--Btn-->
-                                    <div class="mbr-section-btn col-right align-center">
-                                        <a href="https://mobirise.co" class="btn btn-warning-outline m-0 display-4">
+                                    <div class="mbr-section-btn col-right align-center"><a href="page11.html" class="btn btn-warning-outline m-0 display-4">
                                             Buy Now
-                                        </a>
-                                    </div>
+                                        </a></div>
                                 </div>
                             </div>
                         </div>
